--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A high stress code cracking game",
   "main": "index.js",
   "dependencies": {
-    "webpack-cli": "^4.3.1",
-    "webpack": "^5.11.1"
+    "webpack": "^5.11.1",
+    "webpack-cli": "^4.3.1"
   },
   "devDependencies": {},
   "scripts": {
